<resources>
    <string name="app_name">GestionAlumnos</string>

    <!-- Main activity -->
    <string name="title_main_activity">Gestión de alumnos</string>
    <string name="student_btn">Alumnos</string>
    <string name="add_student_btn">Agregar</string>
    <string name="del_student_btn">Eliminar</string>
    <string name="exit_btn">Salir</string>
    <!--Multiple activities -->
    <string name="back_btn">&lt;</string>
    <!-- Students activity -->
    <string name="search_student_hint">Buscar alumno DNI</string>
    <string name="help_text_">Tap en un registro para editar</string>
    <string name="title_stududents_activityy">Alumnos</string>
    <string name="all_students_btn">All </string>    \
    <string name="passed_btn">(✓) </string>    \
    <string name="failed_btn">X!</string>
    <string name="student_has_10">10</string>
    <string name="dni_hint">DNI</string>
    <string name="last_name_hint">Apellido</string>
    <string name="first_name_hint">Nombre</string>
    <string name="grade_hint">Nota</string>


</resources>